@@ -152,9 +152,13 @@ If all column headers are empty ("ps -o pid= -o comm=") then the
 header line will not be output. Column width will increase as
 needed for wide headers; this may be used to widen up columns
 such as WCHAN ("ps -o pid,wchan=WIDE-WCHAN-COLUMN -o comm").
+Explicit width control ("ps opid,wchan:42,cmd") is offered too.
 The behavior of "ps -o pid=X,comm=Y" varies with personality;
 output may be one column named "X,comm=Y" or two columns
 named "X" and "Y". Use multiple -o options when in doubt.
+Use the $PS_FORMAT environment variable to specify a default
+as desired; DefSysV and DefBSD are macros that may be used to
+choose the default UNIX or BSD columns.
 
 The "-g" option can select by session leader OR by group name.
 Selection by session leader is specified by many standards,
@@ -186,7 +190,7 @@ Heuristics are used to determine the behavior of this option. To ensure
 that the desired behavior is obtained, specify the other option (sorting
 or formatting) in some other way.
 
-For sorting, BSD "O" option syntax is O[+|-]k1[,[+|-]k2[,...]]
+For sorting, obsolete BSD "O" option syntax is O[+|-]k1[,[+|-]k2[,...]]
 Order the process listing according to the multilevel sort specified by
 the sequence of short keys from SORT KEYS, k1, k2, ... The `+' is quite
 optional, merely re-iterating the default direction on a key. `-' reverses
